--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
     background-color: #222;
     display: inline-block;
     width: 100%;
+    overflow-x: hidden;
 }
 
 code {
